# Prior-auth-mcp-servers

./: .gitignore  BUNDLE_TYPE_FIX.md  DEMO_SCRIPT.md  FHIR_EXTENSION.md  HACKATHON_SUBMISSION.md  IMPORT_TROUBLESHOOTING.md  LOCATION_FIX_SUMMARY.md  NGROK_SETUP.md  PRACTITIONER_FIX_COMPLETE.md  PROMPT_OPINION_CONFIG.md  QUICK_START.md  README.md  SAMPLE_PATIENTS.md  SETUP_GUIDE.md  TEST_RESULTS.md  UPLOAD_TO_PROMPT_OPINION.md  plan.md
agent/: prior-auth-agent-config.json
mcp-servers/: render.yaml
mcp-servers/document-generation-mcp/: README.md  pyproject.toml  requirements.txt  server.py
mcp-servers/patient-records-mcp/: README.md  pyproject.toml  server.py
mcp-servers/payer-rules-mcp/: README.md  pyproject.toml  server.py
scripts/: diagnose-404.sh  start-mcp-http.sh  test-mcp-protocol.py  test-mcp-servers.py  test-mcp-tools.py  test-ngrok-urls.sh  test-system.sh  test-tools-direct.py  upload-to-fhir.sh  verify-mcp-data.py
