[project]
name = "document-generation-mcp"
version = "0.1.0"
description = "MCP server for drafting prior authorization requests and appeal letters"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.9.0",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["server"]
