[project]
name = "payer-rules-mcp"
version = "0.1.0"
description = "MCP server providing payer-specific prior authorization rules"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.9.0",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["server"]
